/* Copyright 2020 The FedLearner Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package fedlearner.common;

enum StatusCode {
  STATUS_SUCCESS = 0;
  STATUS_UNKNOWN_ERROR = 1;
  STATUS_INVALID_REQUEST = 2;
  STATUS_NO_MORE_DATA = 3;
  STATUS_DATA_FINISHED = 4;
  STATUS_MESSAGE_DUPLICATED = 5;
  STATUS_MESSAGE_MISSING = 6;
  STATUS_INVALID_DATA_BLOCK = 7;
}

message Status {
  StatusCode code = 1;
  string error_message = 2;
}

enum FLRole {
  Leader = 0;
  Follower = 1;
}

enum DataSourceState {
  UnKnown = 0;
  Init = 1;
  Processing = 2;
  Ready = 3;
  Finished = 4;
  Failed = 5;
}

message DataSourceMeta {
  string name = 1;
  uint32 partition_num = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  float negative_sampling_rate = 5;
}

message DataSource {
  DataSourceMeta data_source_meta = 1;
  string output_base_dir = 2;
  FLRole role = 3;
  DataSourceState state = 4;
  string raw_data_sub_dir = 5;
}
